# fluxion

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .editorconfig  .gitignore  .gitmodules  .openhandsignore  .pre-commit-config.yaml  .tarpaulin.toml  AGENTS.md  ASHRAE_140_CI_IMPLEMENTATION.md  ASHRAE_140_PROGRESS.md  BATCH_ISSUES_WORK.md  BATCH_SESSION_SUMMARY.md  BATCH_WORK_SESSION.md  CASE_195_ANALYSIS.md  CASE_236_ANALYSIS.md  CASE_237_ANALYSIS.md  CASE_960_ANALYSIS.md  CI_FIX_SUMMARY.md  CLAUDE.md  CODEBASE_MAP.md  Cargo.toml  Dockerfile  GEMINI.md  IMPLEMENTATION_TASKS.md  INTERZONE_RADIATION.md  INVESTIGATION_REPORT.md  ISSUE_107.md  ISSUE_114.md  ISSUE_226_FIX.md  ISSUE_273_FINAL_SUMMARY.md  ISSUE_280_INVESTIGATION_REPORT.md  ISSUE_281_INVESTIGATION_REPORT.md  ISSUE_282_IMPLEMENTATION_SUMMARY.md  ISSUE_BREAKDOWN_RECOMMENDATIONS.md  LICENSE  PARALLEL_ISSUES_PLAN.md  README.md  REVIEW_AND_FIX_PLAN.md  (+20 more)
.aider.tags.cache.v4/: cache.db
.cargo/: audit.toml  config.toml
.githooks/: batch-oracle-check.sh  perf-baseline.py  rust-doc-check.py
.github/: copilot-instructions.md
.github/scripts/: comment_pr.py
.github/workflows/: ashrae_140_validation.yml  ci.yml  code-coverage.yml  data_gen_test.yml  docker.yml  docs.yml  pypi-release.yml  python-bindings.yml  rust-tests.yml  security.yml
.jules/: bolt.md
.planning/: ARCHITECTURE.md  CONVENTIONS.md  INTEGRATIONS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STACK.md  STATE.md  STRUCTURE.md  TESTING.md
.planning/codebase/: CONCERNS.md
.planning/milestones/: v0.2-REQUIREMENTS.md  v0.2-ROADMAP.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api/: README.md  distributed_inference.py  distributed_inference_config.py  llm.py  main.py  monitoring.py  openapi.yaml  requirements.txt
api/compliance/: __init__.py  agent.py  data_aggregation.py  prompt_engine.py  report_generator.py
api/tests/: test_distributed_inference.py
assets/: loads_predictor.onnx  thermal_surrogate.onnx  training_data.npz
assets/weather/: USA_CO_Denver-Stapleton.Intl.AP.724690_TMY.clm  USA_CO_Denver-Stapleton.Intl.AP.724690_TMY.ddy  USA_CO_Denver-Stapleton.Intl.AP.724690_TMY.epw  USA_CO_Denver-Stapleton.Intl.AP.724690_TMY.pvsyst  USA_CO_Denver-Stapleton.Intl.AP.724690_TMY.rain  USA_CO_Denver-Stapleton.Intl.AP.724690_TMY.stat  USA_CO_Denver-Stapleton.Intl.AP.724690_TMY.wea
benches/: cta_bench.rs  cta_perf_comparison.rs  engine_bench.rs
config/: assemblies.yaml
docs/: 6R2C_IMPLEMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  ASHRAE140_MILESTONES.md  ASHRAE140_MVP_ROADMAP.md  ASHRAE140_RESULTS.md  ASHRAE140_TERMINOLOGY.md  ASHRAE140_VALIDATION.md  ASHRAE_140_5R1C_MODEL.md  ASHRAE_140_DIAGNOSTICS.md  ASHRAE_140_PROGRESS.md  COMPLIANCE_AGENT.md  CONTRIBUTING.md  COVERAGE_FIX.md  CTA_USAGE.md  Diagnostics.md  Diagnostics_API.md  EXAMPLES.md  EXECUTIVE_SUMMARY.md  Fluxion_PRD.md  ISSUE_272_INVESTIGATION_REPORT.md  ISSUE_273_ROOT_CAUSE_ANALYSIS.md  ISSUE_274_INVESTIGATION_SUMMARY.md  ISSUE_278_2026-03-03_SUMMARY.md  ISSUE_280_INVESTIGATION_REPORT.md  KNOWN_ISSUES.md  KNOWN_LIMITATIONS.md  ML_SURROGATE_FDD_PIPELINE.md  ONNX_INTEGRATION.md  PARALLEL_AGENTS_GUIDE.md  PARALLEL_EXECUTION_PLAN.md  PARALLEL_QUICKSTART.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_TUNING.md  PHASE4_TRAINING.md  PHASE5_QUICKSTART.md  QUALITY_METRICS.md  QUICKSTART.md  ROADMAP.md  (+4 more)
docs/cases/: quickstart.md
examples/: README.md  construction_example.rs  dummy_surrogate.onnx  quick_start.sh  risk_aware_example.rs  risk_aware_optimization.py  run_model.py  run_oracle.py  simple_config.json  test_6r2c.rs  validate_surrogate.py
models/: .gitignore
models/rl_policy/: policy.json  policy.onnx  policy.onnx.data
scripts/: setup_parallel_worktrees.sh
src/: lib.rs
src/ai/: batch_inference.rs  context_aware.rs  distributed.rs  ensemble.rs  mod.rs  modular_surrogate.rs  neural_field.rs  rl_policy.rs  shared_batch_service.rs  surrogate.rs
src/analysis/: components.rs  delta.rs  mod.rs  sensitivity.rs  swing.rs  visualization.rs
src/physics/: continuous.rs  cta.rs  geometry_tensor.rs  mod.rs  nd_array.rs
src/sim/: boundary.rs  components.rs  construction.rs  demand_response.rs  distributed_inference.rs  engine.rs  hvac.rs  interzone.rs  (+12 more)
tests/: ashrae_140_case_195_solid_conduction.rs  ashrae_140_case_600.rs  ashrae_140_case_900.rs  ashrae_140_case_960_sunspace.rs  ashrae_140_diagnostic_integration_test.rs  ashrae_140_diagnostic_test.rs  ashrae_140_free_floating.rs  ashrae_140_integration.rs  ashrae_140_setback_ventilation.rs  ashrae_140_validation.rs  benchmark_report_validation.rs  check_900_parameters.rs  check_case_900_materials.rs  cli_integration.rs  conftest.py  debug_600.rs  debug_900.rs  debug_kappa.rs  diagnostic_demo.rs  diagnostics_demo.rs  free_floating_temp_investigation.rs  hvac_demand_diagnostics.rs  hvac_demand_investigation.rs  investigation_960_multi_zone_hvac_issue.rs  issue_365_hvac_sensitivity_verification.rs  repro_issue_376.rs  sensitivity_fix_validation.rs  sensitivity_investigation_diagnostics.rs  solar_calculation_validation.rs  solar_calibration.rs  solar_integration.rs  solution1_revisited_coupling_adjustment.rs  test_6r2c_model.rs  test_6r2c_thermal_mass.rs  test_batched_inference.rs  test_case_195_check_cap.rs  test_case_195_check_conductance.rs  test_case_195_debug.rs  test_case_195_debug2.rs  test_case_195_debug3.rs  (+48 more)
tools/: README.md  auto_train_surrogate.py  batch_rl_environment.py  benchmark_batch_inference.py  benchmark_inference.py  benchmark_throughput.py  benchmark_throughput_gpu.py  check_materials.rs  data_collection.py  ensemble_training.py  fluxion_delta.rs  generate_dummy_surrogate.py  geometry_extraction.py  gymnasium_env.py  integrate_ml_surrogate_pipeline.py  loc_check.rs  online_learning.py  physics_informed_loss.py  physics_loss.py  quantize_model.py  rl_environment.py  train_ensemble_surrogates.py  train_ml_surrogate.py  train_pinn.py  train_rl_policy.py  train_surrogate.py  train_surrogate_mc_dropout.py
(+178 files in other folders)
