[package]
name = "fluxion"
version = "0.1.0"
edition = "2021"
authors = ["Dr. Aris Thorne <aris.thorne@fluxion.org>"]
description = "A differentiable, AI-accelerated Building Energy Modeling engine."
repository = "https://github.com/anchapin/fluxion"
license = "OTHER"

[lib]
name = "fluxion"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Feature flag to enable Python bindings (disabled by default for pure Rust testing)
python-bindings = ["dep:pyo3"]
# Feature flag for CUDA support
cuda = []

[dependencies]
# Core Logic
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Numerical & Math
faer = { version = "0.23.2", default-features = false, features = ["std"] }
# ndarray 0.16 uses pulp 0.21+ which has fixed the size assertion issue with num-complex
ndarray = { version = "0.16", default-features = false, features = ["std", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Parallelism
rayon = "1.10"

# Random number generation for uncertainty quantification
rand = "0.8"

# AI / Machine Learning Integration
# Using 2.0.0-rc.10 (prerelease) as stable 1.20 is not available on crates.io
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

# Python Interop
pyo3 = { version = "0.22", features = ["extension-module", "auto-initialize", "abi3"], optional = true }
crossbeam = "0.8.4"
num-traits = "0.2.19"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[[bench]]
name = "cta_bench"
harness = false

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "cta_perf_comparison"
harness = false

[[bin]]
name = "fluxion-delta"
path = "tools/fluxion_delta.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
split-debuginfo = "packed"
strip = true
