[package]
name = "fluxion"
version = "0.1.0"
edition = "2021"
authors = ["Dr. Aris Thorne <aris.thorne@fluxion.org>"]
description = "A differentiable, AI-accelerated Building Energy Modeling engine."
repository = "https://github.com/anchapin/fluxion"
license = "OTHER"

[lib]
name = "fluxion"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Feature flag to enable Python bindings (disabled by default for pure Rust testing)
python-bindings = ["dep:pyo3", "dep:pyo3-build-config", "dep:numpy"]
# Feature flag for CUDA support
cuda = []

[dependencies]
# Core Logic
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
csv = "1.3"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time handling for reports
chrono = "0.4"

# Numerical & Math
faer = { version = "0.23.2", default-features = false, features = ["std"] }
# ndarray 0.16 uses pulp 0.21+ which has fixed the size assertion issue with num-complex
ndarray = { version = "0.16", default-features = false, features = ["std", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Parallelism
rayon = "1.10"
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Random number generation for uncertainty quantification
rand = "0.8"
rand_distr = "0.4"

# AI / Machine Learning Integration
# Using 2.0.0-rc.10 (prerelease) as stable 1.20 is not available on crates.io
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

# Python Interop
pyo3 = { version = "0.22", features = ["extension-module", "auto-initialize", "abi3-py310"], optional = true }
numpy = { version = "0.22", optional = true }
rstest = { version = "0.25", optional = true }
crossbeam = "0.8.4"
num-traits = "0.2.19"

[build-dependencies]
pyo3-build-config = { version = "0.22", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
approx = "0.5"
rstest = "0.18"

[[bench]]
name = "cta_bench"
harness = false

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "cta_perf_comparison"
harness = false

[[bin]]
name = "fluxion-delta"
path = "tools/fluxion_delta.rs"

[[bin]]
name = "export_csv"
path = "src/bin/export_csv.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
split-debuginfo = "packed"
strip = true

# Explicitly include Phase 6 performance optimization test targets
[[test]]
name = "test_parallel_validation"
path = "tests/test_parallel_validation.rs"
harness = true

[[test]]
name = "test_result_aggregation"
path = "tests/test_result_aggregation.rs"
harness = true

[[test]]
name = "test_validation_report"
path = "tests/test_validation_report.rs"
harness = true

[[test]]
name = "test_modular_surrogates"
path = "tests/test_modular_surrogates.rs"
harness = true
